Objective-C GData Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changes since 1.7.0

Additions

- Added support for Google Analytics API

- Added support for Google Maps Data API

- Added support for Spreadsheets API version 3 with table and record feeds

- Added support for Contacts API version 3

- Added Geo accessor to Calendar API event entries

- Added batch call to Docs API

- Added "next" link accessor to Health profile entries

- Added removeChild method to GDataXMLElement

- Added query convenience method addCategoryFilterWithScheme:term: and
  filter methods addCategoryWithScheme:term: and
  addExcludeCategoryWithScheme:term:

Changes

- Tightened URL encoding rules so portions of feed URLs are more strictly
  percent-encoded.

Bugs Fixed

- Fixed compile on gcc 3.3.

- Removed NSTask invocation for prettyprinting logs in the iPhone simulator
  (thanks antitheos)
  
- Avoid a crash on authentication errors when the failure callback is nil.

- Removed inappropriate override header on POSTs (thanks riggle)


Release 1.7.0
12-March-2009
Changes since 1.6.0

Additions

- Added Google Health classes

- Added YouTube user event activity classes

- Added Calendar guest elements and inlinecomments query parameter

- Contacts sample updated to optionally fetch only the MyContacts group.

Changes

- Calendar now defaults to service version 2.1, which slightly changes
  responses and response codes from 2.0.
  http://code.google.com/apis/calendar/changelog.html

- Release builds on iPhone now compile out the elaborate descriptions
  for each GDataObject.  Developers can set GDATA_SIMPLE_DESCRIPTIONS
  in their projects to control this behavior.

- Release builds on iPhone now compile out the http logging code.
  Developers can set STRIP_GDATA_FETCH_LOGGING in their projects to control
  this behavior.
  